k8s/apps/home/hass/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hass-data-out
spec:
  podSelector:
    matchLabels:
      app: hass
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: home
        podSelector:
          matchExpressions:
            - key: app
              operator: In
              values:
                - nats
                - hyperion
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: media
        podSelector:
          matchExpressions:
            - key: app
              operator: In
              values:
                - qbittorrent
                - lms
